@@ -956,7 +956,7 @@ definition test_3 where "test_3 =
     return zs
   })"
 
-code_reserved SML upto
+code_reserved (SML) upto
 
 ML_val \<open>@{code test_1} ()\<close>
 ML_val \<open>@{code test_2} ()\<close>
