@@ -177,7 +177,7 @@ text \<open>Note that arrays cannot be printed directly but only by turning them
 lists first. Arrays could be converted back into lists for printing if they
 were wrapped up in an additional constructor.\<close>
 
-code_reserved SML Vector
+code_reserved (SML) Vector
 
 code_printing
   type_constructor iarray \<rightharpoonup> (SML) "_ Vector.vector"
@@ -222,7 +222,7 @@ module IArray(IArray, tabulate, of_list, sub, length) where {
 
 }\<close> for type_constructor iarray constant IArray IArray.tabulate IArray.sub' IArray.length'
 
-code_reserved Haskell IArray_Impl
+code_reserved (Haskell) IArray_Impl
 
 code_printing
   type_constructor iarray \<rightharpoonup> (Haskell) "IArray.IArray _"
